Project

General

Profile

Actions

Bug #13928

closed

Calling Integer.fdiv with BigDecimal returns unexpected result

Bug #13928: Calling Integer.fdiv with BigDecimal returns unexpected result

Added by calle.vander@gmail.com (Carl Vander) about 9 years ago. Updated over 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
2.4.2p198
[ruby-core:82924]

Description

After upgrading a Rails project from 2.3.1 to 2.4.2 I ran into a number of failing tests. Seems like to behaviour of fdiv and conjuction with bigdecimal is wrong.

Reproduce by running:

irb(main):001:0> require 'bigdecimal'
=> true
irb(main):002:0> 1.fdiv(1-BigDecimal.new("0"))
=> 2.1296133346e-314

Ruby version: ruby 2.4.2p198 (2017-09-14 revision 59899) [x86_64-darwin16]

I would expect the calculation to return 1, which is correctly done if converting the big decimal to a float first:

irb(main):006:0> 1.fdiv(1-BigDecimal.new("0").to_f)
=> 1.0

Using ruby 2.3.1p112, it also looks OK:

irb(main):001:0> require 'bigdecimal'
=> true
irb(main):002:0> 1.fdiv(1-BigDecimal.new("0"))
=> #<BigDecimal:7fb6b8949690,'0.1E1',9(36)>
irb(main):003:0> 1.fdiv(1-BigDecimal.new("0")).to_i
=> 1


Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #13986: Integer#fdiv with Complex returns unexpected valueClosedActions
Actions

Also available in: PDF Atom